# tree-sitter-c

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  go.sum  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-c.pc.in
bindings/go/: binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_c/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCTests/: TreeSitterCTests.swift
bindings/zig/: root.zig  test.zig
cmake/: CTestConfig.cmake  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
corpus/: declarations.txt  statements.txt
queries/: highlights.scm  locals.scm
src/: CMakeLists.txt  grammar.json  node-types.json  parser.c
src/tree_sitter/: parser.h
test/corpus/: ambiguities.txt  declarations.txt  expressions.txt  preprocessor.txt  statements.txt  types.txt
